--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
-*{ 
-    margin:0;
-    padding:0;
+*{
+    margin: 0;
+    padding: 0;
+
 }
-body{ 
-    font-family: cursive;
+body {
+    font-family: 'Poppins', sans-serif;
+
 }
-.cabecalho{ 
-    background-color: aliceblue;
-    color: aliceblue;
+.cabecalho {
+    background-color: #3B0050;
+    color: white;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    padding: 24px;
+    align-items:center;
+    padding: 24px 0;
 }
-.cabacalho-imagem{ 
+
+.cabecalho-imagem{
     width: 10%;
+
 }
-.cabecalho-lista-img{ 
+
+.cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     font-size: 16px;
+}    
+
+.sobre_corinthians{
+    background-image: linear-gradient(#3B0050,#3b00501f);
+    color:#FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
 }
-.memoia{
-background-image: -moz-linear-gradient( );
-color: ;
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 24px 0;
+
+.sobre_corinthians-imagem{
+    width: 20%;
 }
-.memoia{
-    width: 25%;
-}
+
