--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 }
 .cabecalho {
-    background-color: #3B0050;
+    background-color: #75a85d;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -28,7 +28,7 @@ body {
 }    
 
 .sobre_corinthians{
-    background-image: linear-gradient(#3B0050,#3b00501f);
+    background-image: linear-gradient(#9dbe8e,#4daa64b4);
     color:#FFFFFF;
     display: flex;
     justify-content: center;
