--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 }
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 25px;
 
 }
 .cabecalho {
