--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 }
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
 
 }
 .cabecalho {
@@ -17,7 +17,7 @@ body {
 }
 
 .cabecalho-imagem{
-    width: 10%;
+    width: 50%;
 
 }
 
