--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 
 }
 .cabecalho {
-    background-color: #75a85d;
-    color: rgb(37, 102, 43);
+    background-color: #b197db;
+    color: rgb(91, 74, 138);
     display: flex;
     justify-content: space-around;
     align-items:center;
