--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     font-size: 90px;
 }    
 
-.sobre_corinthians{
+.sobre_lembranças{
     background-image: linear-gradient(#9dbe8e,#4daa64b4);
     color:#44622f;
     display: flex;
@@ -36,7 +36,7 @@ body {
     padding: 24px 0;
 }
 
-.sobre_corinthians-imagem{
+.sobre_lembranças-imagem{
     width: 20%;
 }
 
