--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
  /* secao cabecalho*/
    .cabecalho{
         background-color: #9f84cc;
-        color: rgb(90, 62, 155);
+        color: rgb(102, 74, 165);
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -32,7 +32,7 @@
           width: 25%;
      }
 
-      /* secao animes*/
+      /* secao lembranças*/
 
 .sobre-os-animes{
           background-image: linear-gradient(#3B0050,#3b00501f);
@@ -57,7 +57,7 @@
       }
       
       .sobre_nos-imagem{
-          width: 25%;
+          width: 50%;
       }
       /* secao personagens*/
 .personagens{
