--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
     body{
-     font-family: 'Poppins', sans-serif;
+     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
  /* secao cabecalho*/
