--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
     body{
-     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
  /* secao cabecalho*/
@@ -23,7 +23,7 @@
    }
 
    .cabecalho-lista-item{
-        display:-webkit-inline-flex;
+        display:-moz-popup;
         margin: 0 20px;
         font-size: 150px;
    }
