--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 
 
     body{
-     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     font-family: 'Poppins', sans-serif;
     }
 
  /* secao cabecalho*/
    .cabecalho{
-        background-color: #d8c0ec;
-        color: #a378c7;
+        background-color: #c5c1c1;
+        color: white;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -19,13 +19,13 @@
    } 
 
    .cabecalho-imagem{
-        width: 17%;
+        width: 10%;
    }
 
    .cabecalho-lista-item{
-        display:-moz-popup;
-        margin: 0 20px;
-        font-size: 150px;
+        display: inline-block;
+        margin: 0 16px;
+        font-size: 16px;
    }
     
      .sobre-os-animes-img{
@@ -51,12 +51,13 @@
           text-align: center;
           font-size: 45px;
       }
-      
-      .sobre_nos-paragrafo{
-          font-size: 25px;
+      .sobre-os-animes-texto-um{
+          font-size: 18px;
       }
-      
-      .sobre_nos-imagem{
+      .sobre-os-animes-texto-dois{
+        font-size: 18px;
+    }
+      .sobre-os-animes-img{
           width: 25%;
       }
       /* secao personagens*/
