--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
     body{
-     font-family: 'Poppins', sans-serif;
+     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
  /* secao cabecalho*/
