--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
       /* secao animes*/
 
 .fotografias{
-          background-image: linear-gradient(#3B0050,#3b00501f);
+          background-image: linear-gradient(#d1f5c0,#e9fae1);
           color:#a30000;
           display: flex;
           justify-content: center;
