--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
 .fotografias{
           background-image: linear-gradient(#d1f5c0,#e9fae1);
-          color:#a30000;
+          color:#000000;
           display: flex;
           justify-content: center;
           padding: 50px;
