--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
           display: flex;
           justify-content: center;
           padding: 50px;
-          border-bottom: 2px solid #802f00cc;
+          border-bottom: 2px solid #86c568;
       }
       
       .sobre-os-animes-conteudo{
