--- a/style.css
+++ b/style.css
@@ -43,21 +43,19 @@
           border-bottom: 2px solid #86c568;
       }
       
-      .sobre-os-animes-conteudo{
+      .fotografias-conteudo{
           width: 650px;
       }
-      .sobre-os-animes-titulo{
+      .fotografias-titulo{
           padding: 45px 0;
           text-align: center;
           font-size: 45px;
       }
-      .sobre-os-animes-texto-um{
+      .fotografias-texto-um{
           font-size: 18px;
       }
-      .sobre-os-animes-texto-dois{
-        font-size: 18px;
-    }
-      .sobre-os-animes-img{
+      
+      .fotografias-img{
           width: 25%;
       }
       /* secao personagens*/
