--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
       }
       /* secao personagens*/
 .fotos{
-     background-color: #a9a9a9;
+     background-color: #e9fae1;
  }
  
  .personagens-titulo{
