--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
  .personagem-nome{
      font-weight: 100;
      text-decoration: underline;
-     color: #bd1d1d;
+     color: #0a5029;
  }
  .personagem-nome:hover{
      font-weight: 100;
