--- a/style.css
+++ b/style.css
@@ -98,3 +98,22 @@
      width: 35px;
      padding: 5px 0;
  }
+
+
+ .rodape{
+    background-color: black;
+    text-align: center;
+    padding: 50px;
+    border-top: 2px solid #ffff00b2;
+}
+
+.rodape-titulo{
+    font-size: 25px;
+    font-weight: bold;
+    color: #ffff00b2;
+}
+
+.rodape-imagem{
+    width: 100px;
+    filter: invert();
+}
