--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@
 
 
  .rodape{
-    background-color: black;
+    background-color: rgb(#86c568;
     text-align: center;
     padding: 50px;
     border-top: 2px solid #ffff00b2;
