--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
+
 *{
     margin: 0;
     padding: 0;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
     body{
-     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+     font-family:'Inter';
     }
 
  /* secao cabecalho*/
